--- a/Sudoku_Game/.classpath
+++ b/Sudoku_Game/.classpath
@@ -2,6 +2,9 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="json-simple-1.1.1.jar"/>
+	<classpathentry kind="src" path="res"/>
+	<classpathentry kind="lib" path="libs/jackson-core-2.9.4.jar"/>
+	<classpathentry kind="lib" path="libs/jackson-annotations-2.9.4.jar"/>
+	<classpathentry kind="lib" path="libs/jackson-databind-2.9.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
